Добавлена синхронизации файлов на клиенте
