# Files-cloud-manager.Server/Models/FileUploadModel.cs
@@ -1,0 +1,7 @@
+﻿namespace Files_cloud_manager.Server.Models
+{
+    public class FileUploadModel
+    {
+        public IFormFile UploadedFile { get; set; }
+    }
+}
