# Files-cloud-manager.Server/Services/Interfaces/ISynchronizationContainerService.cs
@@ -4,8 +4,8 @@ namespace Files_cloud_manager.Server.Services.Interfaces
 {
     public interface ISynchronizationContainerService
     {
-        Task<bool> CreateOrUpdateFileInFileInfoGroupAsync(int userId, int syncId, string filePath, Stream uploadedFile);
-        Task<bool> DeleteFileInFileInfoGroupAsync(int userId, int syncId, string filePath);
+        Task<bool> CreateOrUpdateFileAsync(int userId, int syncId, string filePath, Stream uploadedFile);
+        Task<bool> DeleteFileAsync(int userId, int syncId, string filePath);
         Task<bool> EndSynchronizationAsync(int userId, int syncId);
         Task<Stream> GetFileAsync(int userId, int syncId, string filePath);
         Task<List<FileInfoDTO>> GetFilesInfosAsync(int userId, int syncId);
